<resources>
    <string name="app_name">童伴</string>
    <string name="wating_hint">请稍候…</string>
    <string name="network_connect_unavailable">网络好像不可用哦</string>
    <string name="network_connect_timeout">网络好像不给力呢，休息~休息一会儿~</string>
    <string name="network_status_not_good">网络状态不佳</string>
    <string name="reload_page">重新加载</string>
    <string name="login_timeout_alert">会话已过期,请重新登录</string>
    <string name="exit_tip">再按一次退出应用</string>
    <string name="data_get_error">数据获取失败</string>
    <string name="no_sdcard">存储卡无法挂载,请检查后再试&#8230;</string>

    <!-- pull to refresh start -->
    <string name="header_hint_refresh_normal">下拉刷新...</string>
    <string name="header_hint_refresh_ready">松手立即更新...</string>
    <string name="header_hint_refresh_loading">正在加载...</string>
    <string name="header_hint_refresh_time">时间：</string>
    <string name="footer_hint_load_normal">上拉加载更多</string>
    <string name="footer_hint_load_ready">松手立即加载更多...</string>
    <!-- pull to refresh end -->

    <!-- login -->
    <string name="login">登录</string>
    <string name="login_space">登 录</string>
    <string name="confirm">确 定</string>
    <string name="register_space">注 册</string>
    <string name="input_nickname_tip">请输入昵称</string>
    <string name="input_phone_tip">请输入手机号码</string>
    <string name="input_psd_tip">请输入密码</string>
    <string name="input_code_tip">请输入验证码</string>
    <string name="input_code">输入验证码</string>
    <string name="find_psd">找回密码</string>
    <string name="modify_psd">重置密码</string>
    <string name="new_user_register">新用户注册</string>
    <string name="user_register">用户注册</string>
    <string name="get_code">获取验证码</string>
    <string name="law_article">用户使用说明协议书</string>
    <string name="institution_register_title">机构注册</string>
    <string name="institution_register">机构注册></string>
    <string name="check_law_tip">请选择法律条款</string>
    <string name="input_institution_tip">请输入机构名称</string>
    <string name="input_address_tip">请输入机构地址</string>
    <string name="input_intro_tip">请输入机构简介</string>
    <string name="login_phone_tip">请输入您的手机号登录</string>
    <string name="register_phone_tip">请输入注册手机号</string>
    <string name="login_psd_tip">请输入您的登录密码</string>
    <string name="login_repsd_tip">请再次输入您的登录密码</string>
    <string name="register_psd_tip">请输入注册密码</string>
    <string name="code_tip">请输入您的验证码</string>
    <string name="phone_not_null">手机号不能为空!</string>
    <string name="psd_not_null">密码不能为空!</string>
    <string name="psd_not_same">两次输入的密码不一致，请重新输入</string>
    <string name="register_success">注册成功</string>
    <string name="send_success">发送成功</string>

    <!-- main -->
    <string name="activity">活动</string>
    <string name="personal">个人</string>
    <string name="personal_info">个人信息</string>
    <string name="friend">好友</string>
    <string name="all">所有</string>
    <string name="part_in">参加</string>
    <string name="follow">关注</string>
    <string name="cancel_follow">取消关注</string>
    <string name="follow_success">关注成功</string>
    <string name="follow_fail">关注失败</string>
    <string name="qrcode">扫一扫加好友</string>
    <string name="qr_code">二维码</string>
    <string name="message_center">消息中心</string>
    <string name="message">消息</string>
    <string name="message_record">消息记录</string>
    <string name="message_detail">消息详情</string>
    <string name="activity_message_list">活动消息列表</string>
    <string name="setting">设置</string>
    <string name="name">姓名</string>
    <string name="my_qrcode">我的二维码</string>
    <string name="fans">粉丝</string>
    <string name="my_fans">我的粉丝</string>
    <string name="mine">我的</string>

    <!-- activity -->
    <string name="activity_detail">活动详情</string>
    <string name="activity_user">活动用户</string>
    <string name="activity_base_info">活动基本信息</string>
    <string name="activity_base_info_tip">（必填）下面所有内容必填</string>
    <string name="signed_user">已报名用户</string>
    <string name="institution_info">查看机构信息</string>
    <string name="activity_intro">活动介绍</string>
    <string name="activity_info">活动信息</string>
    <string name="detail_intro">详细介绍》</string>
    <string name="start_time">开始时间</string>
    <string name="end_time">结束时间</string>
    <string name="start_address">起始地点</string>
    <string name="activity_address">活动地点</string>
    <string name="charter_notice">包车公示</string>
    <string name="activity_num">活动人数</string>
    <string name="upload_image">上传活动图片</string>
    <string name="more_intro">更多描述</string>
    <string name="special_tip">特别提示</string>
    <string name="activity_detail_intro">活动详细介绍</string>
    <string name="path_intro">路线描述</string>
    <string name="activity_cost">活动费用</string>
    <string name="travel_assign">行程安排</string>
    <string name="equipment_require">装备要求</string>
    <string name="tab_follow">关注</string>
    <string name="tab_sign">报名</string>
    <string name="tab_invite">邀请</string>
    <string name="invite_friend">邀请好友</string>
    <string name="activity_mark">活动评价</string>
    <string name="institution_detail">机构信息</string>
    <string name="sign_num">%d人/已报名</string>
    <string name="view_num">%d次/浏览</string>
    <string name="people_num">%d人</string>
    <string name="publish_name">发布人姓名：%s</string>
    <string name="publish">发布</string>
    <string name="publish_success">发布成功</string>
    <string name="sign">报名</string>
    <string name="sign_select">请填写活动小孩的个数</string>
    <string name="parent_select">请至少选一名陪同家长</string>
    <string name="friend_select">请选择分享好友</string>
    <string name="signed_num">参加活动的小孩个数</string>
    <string name="activity_sign_success">活动报名成功</string>
    <string name="signed_num_tip">%d人/已报名</string>
    <string name="invite_success">邀请好友成功</string>
    <string name="publish_activity">我要发布活动</string>
    <string name="published_activity">已发布活动</string>
    <string name="all_institution_activity">机构的所有活动</string>
    <string name="activity_tip">*等待系统认证后，方能发活动</string>
    <string name="no_sign_user">该活动暂无人报名</string>
    <string name="subject">主题</string>
    <string name="address">地点</string>
    <string name="num">人数</string>
    <string name="time">时间</string>
    <string name="input_subject">请输入活动主题</string>
    <string name="input_address">请输入活动地点</string>
    <string name="input_num">请输入活动人数</string>
    <string name="select_start_time">请选择开始时间</string>
    <string name="select_end_time">请选择结束时间</string>
    <string name="upload_image_tip">请上传活动图片</string>
    <string name="input_activity_detail">请输入活动详细介绍</string>
    <string name="input_path_intro">请输入路线描述</string>
    <string name="input_activity_cost">请输入活动费用</string>
    <string name="input_activity_arrange">请输入行程安排</string>
    <string name="input_equipment">请输入装备要求</string>
    <string name="activity_title">活动标题：%s</string>
    <string name="activity_time">活动时间：%s</string>
    <string name="activity_instrument">活动机构：%s</string>
    <string name="detail_tip">网页版发布了，可以在电脑上发布活动了！赶快行动吧 http://tong-ban.club:8080/playfun</string>

    <!-- info -->
    <string name="delete">删除</string>
    <string name="leave_message">留 言</string>
    <string name="send_notice">发通知</string>
    <string name="change_note_name">修 改</string>
    <string name="nickname">昵称</string>
    <string name="note_name">备注名</string>
    <string name="message_title_hint">请输入留言标题</string>
    <string name="message_content_hint">请输入留言内容</string>
    <string name="leave_msg_success">发送成功</string>
    <string name="send">发送</string>
    <string name="pick_a_picture">可选择添加一张图片</string>
    <string name="cancel">取消</string>
    <string name="take_photo">拍照</string>
    <string name="choose_from_album">从手机相册选择</string>
    <string name="save">保存</string>
    <string name="update_success">修改成功</string>
    <string name="update_fail">修改失败</string>
    <string name="registration_info">报名常用信息</string>
    <string name="finish">完成</string>
    <string name="parent_info_edit">家长详情编辑</string>
    <string name="edit">编辑</string>
    <string name="add">添加</string>
    <string name="parent_add">家长添加</string>
    <string name="add_success">添加成功</string>
    <string name="add_fail">添加失败</string>
    <string name="name_title">姓 名:</string>
    <string name="phone_title">电 话:</string>
    <string name="input_name_tip">请输入姓名</string>
    <string name="message_push">消息推送</string>
    <string name="check_update">检查更新</string>
    <string name="change_psd">修改密码</string>
    <string name="modify_phone">修改手机号</string>
    <string name="feedback">反馈</string>
    <string name="about">关于</string>
    <string name="exit">退 出</string>
    <string name="feedback_tip">这里输入您宝贵的建议</string>
    <string name="submit">提交</string>
    <string name="next">下一步</string>
    <string name="phone_tip">您的当前手机号为：%s</string>
    <string name="delete_success">删除成功</string>
    <string name="delete_fail">删除失败</string>
    <string name="input_feedback_tip">请输入反馈内容</string>
    <string name="feedback_success">反馈成功</string>
    <string name="company_name">单位名称</string>
    <string name="company_address">单位地址</string>
    <string name="company_intro">单位简介</string>
    <string name="operate_success">操作成功</string>
    <string name="activity_share_title">这个活动不错哦~</string>
    <string name="activity_share_url">http://101.200.235.17:8080/playfun/getActivityDetailByWeb?activityId=%d</string>

    <!-- qr code -->
    <string name="scan_tips">将二维码放入框内,即可自动扫描</string>

    <!-- share begin -->
    <string name="share">分享</string>
    <string name="errcode_success">分享成功</string>
    <string name="errcode_cancel">分享取消</string>
    <string name="errcode_deny">分享被拒绝</string>
    <string name="errcode_unknown">分享返回</string>
    <string name="weixin_not_install">未安装微信，无法进行分享</string>
    <string name="share_default_content">专为中国人设计的口语能力提升App</string>
    <string name="kouyu_website">http://kouyu.youdao.com/panda.html</string>
    <string name="share_brief">推荐一个很好玩的英语学习工具--有道口语大师。</string>
    <string name="share_website">http://kouyu.youdao.com</string>
    <string name="share_app_img_url">http://shared.ydstatic.com/xue/bigbang/share/share_app.jpg</string>
    <string name="title_activity_video_player">播放器Demo</string>
    <string name="title_activity_payment">PaymentActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <!-- share end -->

    <!-- check update -->
    <string name="update">更新</string>
    <string name="new_version_tip">版本更新</string>
    <string name="update_content_tip">更新内容:\n</string>
    <string name="update_size_tip">更新包大小:</string>
    <string name="task_downloading">有其他任务正在下载，请稍后再试</string>
    <string name="download_fail_by_network">下载失败，请检查网络连接是否正常</string>
    <string name="download_fail_and_restart">下载文件错误，正在重新下载</string>
    <string name="download_fail_by_sdcard">下载失败，未检测到sd卡或sd卡容量不足</string>
    <string name="download_fail_retry">下载失败，请稍后重试</string>
    <string name="title_activity_webview">WebviewActivity</string>

</resources>
