<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_gray"
    android:orientation="vertical" >

    <com.partner.view.TitleView
        android:id="@+id/view_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:id="@+id/lv_registration_info"
        android:layout_marginTop="@dimen/partner_space_medium"
        style="@style/ItemLayout"
        android:minHeight="45dp"
        >

        <ImageView
            android:id="@+id/im_message_switch"
            style="@style/PersonalArrowStyle"
            android:background="@drawable/pref_check_box_off"
            android:onClick="onSwitchClick"
            />
        <TextView
            style="@style/PersonalItemText"
            android:layout_marginLeft="@dimen/partner_space_common"
            android:text="@string/message_push"
            />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/bg_gray"
        />

    <RelativeLayout
        style="@style/ItemLayout"
        android:onClick="onCheckUpdateClick"
        android:minHeight="45dp"
        >
        <ImageView
            style="@style/PersonalArrowStyle"
            />
        <TextView
            style="@style/PersonalItemText"
            android:layout_marginLeft="@dimen/partner_space_common"
            android:text="@string/check_update"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/lv_modify_psd"
        android:layout_marginTop="@dimen/partner_space_medium"
        style="@style/ItemLayout"
        android:onClick="onModifyPsdClick"
        android:minHeight="45dp"
        >

        <ImageView
            style="@style/PersonalArrowStyle"
            />
        <TextView
            style="@style/PersonalItemText"
            android:layout_marginLeft="@dimen/partner_space_common"
            android:text="@string/change_psd"
            />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/bg_gray"
        />

    <RelativeLayout
        style="@style/ItemLayout"
        android:onClick="onModifyPhoneClick"
        android:minHeight="45dp"
        >
        <ImageView
            style="@style/PersonalArrowStyle"
            />
        <TextView
            style="@style/PersonalItemText"
            android:layout_marginLeft="@dimen/partner_space_common"
            android:text="@string/modify_phone"
            />
    </RelativeLayout>


    <RelativeLayout
        android:layout_marginTop="@dimen/partner_space_medium"
        style="@style/ItemLayout"
        android:onClick="onFeedbackClick"
        android:minHeight="45dp"
        >

        <ImageView
            style="@style/PersonalArrowStyle"
            />
        <TextView
            style="@style/PersonalItemText"
            android:layout_marginLeft="@dimen/partner_space_common"
            android:text="@string/feedback"
            />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/bg_gray"
        />

    <RelativeLayout
        style="@style/ItemLayout"
        android:onClick="onAboutClick"
        android:minHeight="45dp"
        >
        <ImageView
            style="@style/PersonalArrowStyle"
            />
        <TextView
            style="@style/PersonalItemText"
            android:layout_marginLeft="@dimen/partner_space_common"
            android:text="@string/about"
            />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:layout_marginTop="@dimen/partner_space_common"
        android:layout_marginLeft="@dimen/partner_space_huge"
        android:layout_marginRight="@dimen/partner_space_huge"
        android:gravity="center"
        android:textColor="@color/red"
        android:textSize="@dimen/ts_16"
        android:text="@string/exit"
        android:clickable="true"
        android:onClick="onLogoutClick"
        android:background="@drawable/bg_edit"
        />
</LinearLayout>