<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_gray"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:textSize="@dimen/ts_20"
        android:text="@string/activity"
        android:background="@drawable/bg_title"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@color/white"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_type_all"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/all"
            android:textColor="@color/text_blue"
            android:textSize="@dimen/ts_14" />

        <View
            android:layout_width="2dp"
            android:layout_height="15dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/ic_apart_gray"
            />

        <TextView
            android:id="@+id/tv_type_activity"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/part_in"
            android:textColor="@color/black"
            android:textSize="@dimen/ts_14" />

        <View
            android:layout_width="2dp"
            android:layout_height="15dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/ic_apart_gray"
            />

        <TextView
            android:id="@+id/tv_type_follow"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/follow"
            android:textColor="@color/black"
            android:textSize="@dimen/ts_14" />
    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/pager_activity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/partner_space_middle"
        android:layout_marginRight="@dimen/partner_space_middle"
        android:background="@color/white" />
</LinearLayout>