<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_gray"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:textSize="@dimen/ts_20"
        android:text="@string/personal"
        android:background="@drawable/bg_title"
        />

    <RelativeLayout
        android:id="@+id/lv_info"
        android:layout_marginTop="@dimen/partner_space_medium"
        style="@style/ItemLayout"
        >
        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/im_avatar"
            style="@style/PersonalIndexImage"
            android:layout_height="80dp"
            android:layout_width="80dp"
            fresco:placeholderImage="@drawable/ic_loading"
            />

        <ImageView
            style="@style/PersonalArrowStyle"
            />
        <TextView
            android:id="@+id/tv_name"
            style="@style/PersonalItemText"
            android:layout_toRightOf="@id/im_avatar"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/lv_registration_info"
        android:layout_marginTop="@dimen/partner_space_medium"
        style="@style/ItemLayout"
        >
        <ImageView
            android:id="@+id/im_registration"
            style="@style/PersonalIndexImage"
            android:src="@drawable/ic_message"
            />

        <ImageView
            android:id="@+id/im_arrow"
            style="@style/PersonalArrowStyle"
            />
        <TextView
            android:id="@+id/tv_registration"
            style="@style/PersonalItemText"
            android:layout_toRightOf="@id/im_registration"
            android:text="@string/registration_info"
            />

        <TextView
            android:id="@+id/tv_activity_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/partner_space_normal"
            android:layout_toLeftOf="@id/im_arrow"
            android:text="@string/activity_tip"
            android:textSize="@dimen/ts_11"
            android:textColor="@color/red"
            android:visibility="gone"
            />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/bg_gray"
        />

    <RelativeLayout
        android:id="@+id/lv_qrcode"
        style="@style/ItemLayout"
        >
        <ImageView
            android:id="@+id/im_qrcode"
            style="@style/PersonalIndexImage"
            android:src="@drawable/ic_qrcode"
            />

        <ImageView
            style="@style/PersonalArrowStyle"
            />
        <TextView
            android:id="@+id/tv_qrcode"
            style="@style/PersonalItemText"
            android:layout_toRightOf="@id/im_qrcode"
            android:text="@string/qrcode"
            />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/bg_gray"
        />

    <RelativeLayout
        android:id="@+id/lv_message_center"
        style="@style/ItemLayout"
        >
        <ImageView
            android:id="@+id/im_message_center"
            style="@style/PersonalIndexImage"
            android:src="@drawable/ic_message"
            />

        <ImageView
            style="@style/PersonalArrowStyle"
            />
        <TextView
            style="@style/PersonalItemText"
            android:layout_toRightOf="@id/im_message_center"
            android:text="@string/message_center"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/lv_setting"
        android:layout_marginTop="@dimen/partner_space_medium"
        style="@style/ItemLayout"
        >
        <ImageView
            android:id="@+id/im_setting"
            style="@style/PersonalIndexImage"
            android:src="@drawable/ic_setting"
            />

        <ImageView
            style="@style/PersonalArrowStyle"
            />
        <TextView
            style="@style/PersonalItemText"
            android:layout_toRightOf="@id/im_setting"
            android:text="@string/setting"
            />
    </RelativeLayout>
</LinearLayout>