<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white" >

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:textSize="@dimen/ts_20"
        android:text="@string/app_name"
        android:background="@drawable/bg_title"
        />

    <LinearLayout
        android:id="@+id/lv_tab"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_below="@id/tv_title"
        android:background="@color/white"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_type_friend"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/all"
            android:textColor="@color/text_blue"
            android:textSize="@dimen/ts_14" />

        <View
            android:layout_width="2dp"
            android:layout_height="15dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/ic_apart_gray"
            />

        <TextView
            android:id="@+id/tv_type_follow"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/follow"
            android:textColor="@color/black"
            android:textSize="@dimen/ts_14" />

    </LinearLayout>

    <View
        android:id="@+id/view_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/lv_tab"
        android:background="@color/bg_gray"
        />

    <com.partner.view.CustomViewPager
        android:id="@+id/pager_friend"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/view_divider"
        android:background="@color/white" />
</RelativeLayout>